--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,12 @@
 .dark-1{
     color: #181818;
 }
+.dark-2{
+    color: #474747;
+}
+.dark-3{
+    color: #757575;
+}
 .btn-primary{
     display: flex;
     align-items: center;
@@ -21,6 +27,10 @@
     padding: 19px 17px;
 }
 
+/* header style */
+header{
+    margin-bottom: 130px;
+}
 
 /* navbar styles */
 .navber{
@@ -70,7 +80,6 @@ ul > li{
     width: 585px;
 }
 .hero-semi-title{
-    color: #474747;
     font-weight: 600;
     font-size: 45px;
     margin-bottom: 0px;
@@ -82,7 +91,6 @@ ul > li{
     margin-bottom: 20px;
 }
 .hero-description{
-    color: #757575;
     font-size: 20px;
 }
 .hero-buttons{
@@ -109,4 +117,118 @@ ul > li{
     background-image: url(../images/header_bg.png);
     background-repeat: repeat-x;
     background-position: bottom left;
+}
+
+
+/* about styles */
+.about-container{
+    width: 827px;
+    text-align: center;
+    margin: 131px auto;
+}
+.about-title{
+    font-weight: bold;
+    font-size: 35px;
+    margin-bottom: 30px;
+}
+.about-description{
+    font-size: 18px;
+    margin-top: 0px;
+    margin-bottom: 30px;
+}
+.info-container{
+    display: flex;
+    justify-content: space-evenly;
+}
+.info{
+    font-size: 20px;
+    text-align: center;
+}
+.info-details{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+/* what I do styles */
+.experience{
+    text-align: center;
+    width: 827px;
+    margin: auto;
+}
+.experience-title{
+    font-weight: bold;
+    font-size: 35px;
+    margin-bottom: 30px;
+}
+.experience-description{
+    font-size: 18px;
+    margin-top: 0px;
+    margin-bottom: 30px;
+}
+.cards{
+    display: flex;
+    gap: 24px;
+    margin-top: 50px;
+    margin-bottom: 130px;
+    justify-content: center;
+}
+.card-container{
+    background-color: white;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.27);
+    width: 167px;
+    padding: 30px 35px;
+    border-radius: 5px;
+}
+.card{
+    width: 180px;
+    height: auto;
+}
+.card-title{
+    font-weight: bold;
+    font-size: 20px;
+}
+
+
+/* summary styles */
+.summary-heading{
+    font-weight: bold;
+    font-size: 35px;
+    margin-bottom: 113px;
+    text-align: center;
+}
+.summary-container{
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+.summary{
+    width: 511px;
+}
+.summary-title{
+    font-weight: bold;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+.summary-subtitle{
+    margin-bottom: 10px;
+    margin-top: 0px;
+    font-weight: bold;
+    font-size: 20px;
+}
+.summary-info{
+    margin-top: 0px;
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 20px;
+}
+hr{
+    width: 578px;
+    color: #D1D1D1;
+    margin: 30px 0;
+}
+.summary-btn{
+    margin: auto;
+    margin-bottom: 133px;
 }
